--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ readme = "README.md"
 version = "0.1.0"
 requires-python = ">=3.10"
 dependencies = [
-    "requests", "PyJWT", "cryptography"
+    "requests", "PyJWT", "cryptography", "staticpipes>=0.6,<2", "jinja2"
 ]
+
+
+[tool.setuptools.package-data]
+"publicdataextractorformeetupcom.site" = ["*.css", "*.html"]
 
 [project.optional-dependencies]
 dev= ["pytest", "black", "isort", "flake8"]
